--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,4 +14,5 @@ RoxygenNote: 6.1.1
 Roxygen: list(markdown = TRUE)
 URL: https://escalc.opens.science
 Suggests: 
-    testthat
+    testthat,
+    covr
