--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
-language: R
-sudo: false
+language: r
 cache: packages
+r: release
+dist: xenial
 
 after_success:
   - Rscript -e 'covr::codecov()'
-  
