Started on d_from_2x2() function. [ci skip]

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,6 +4,7 @@ Date: 2019-09-10
 Title: Package for Computing Effect Sizes
 Authors@R: c(person("Wolfgang", "Viechtbauer", email = "wvb@wvauer.com", role = c("aut","cre")), person("Gjalt-Jorn", "Peters", email = "gjalt-jorn@behaviorchange.eu", role = c("aut")), person("Simon", "Columbus", email = "simoncolumbus@gmail.com", role = c("aut")))
 Depends: R (>= 3.2.0)
+Imports: stats
 Description: Package for computing effect sizes based on various statistics.
 License: GPL (>=2)
 ByteCompile: TRUE
